test/spec_vectors/simd_i32x4_extmul_i16x8/fail/module_6.wat
(module (func $i32x4.extmul_low_i16x8_s-arg-empty (result v128) (i32x4.extmul_low_i16x8_s)))